<resources>
    <string name="app_name">MealCal</string>
    <string name="action_settings">About</string>

    // Main Activity
    <string name="meal_rate_text">Meal Rate :</string>
    <string name="extra_cost_text">Extra Cost :</string>
    <string name="fine_range_text">Fine Range :</string>
    <string name="fine_rate_text">Fine Rate :</string>
    <string name="guest_meal_text">Charge For Guest Meal</string>

    // Main Activity 2

    <string name="mealRateText">Meal Rate : %s</string>
    <string name="extraCostText">Extra Cost : %s</string>
    <string name="fineRangeText">Fine Range : %s</string>
    <string name="fineRateText">Fine Rate : %s</string>

    <string name="total_spend">Total Spend : %s TK.</string>
    <string name="remaining_balance">Remaining Balance : %s TK.</string>
    <string name="fine_balance">Fine : %s TK.</string>
    <string name="due_balance">Total Due : %s TK.</string>

    <string name="title_activity_main3">Main3Activity</string>


    // About Activity
    <string name="developed_by">- Developed by Jayanta Roy</string>
    <string name="about_text">\" The app has been made for making easy the calculation of every mess. The great facilities of this app is that, it calculates the total cost automatically by giving meal rate and extra cost and it counts the fine by fine range and multiply by the fine rate and showing the total due.\"</string>


</resources>
