<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/mealRate"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/mealRateText"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.034"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/meal_rate_text"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:id="@+id/mealRateText" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/extraCost"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/extraCostText" android:layout_marginStart="8dp"
            android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/mealRate"
            app:layout_constraintHorizontal_bias="0.034"/>
    <TextView
            android:text="@string/extra_cost_text"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:id="@+id/extraCostText" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/mealRateText"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/fineRange"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/fineRangeText"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/hasFine"
            android:textColor="#FF5722"/>
    <TextView
            android:text="@string/fine_range_text"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:visibility="invisible"
            android:id="@+id/fineRangeText" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/hasFine"
            android:textColor="#FF5722"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/fineRate"
            android:visibility="invisible"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fineRateText" android:layout_marginStart="10dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/fineRange"
            app:layout_constraintHorizontal_bias="0.041" android:textColor="#FF5722"/>
    <TextView
            android:text="@string/fine_rate_text"
            android:layout_width="110dp"
            android:gravity="left"
            android:layout_height="34dp"
            android:visibility="invisible"
            android:id="@+id/fineRateText" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/fineRangeText"
            android:textColor="#FF5722"/>
    <CheckBox
            android:text="@string/guest_meal_text"
            android:layout_width="243dp"
            android:layout_height="34dp"
            android:id="@+id/guestMealCheckBox"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="#2196F3" android:textSize="18sp" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintTop_toBottomOf="@+id/extraCostText" android:layout_marginTop="20dp"
            android:textColorLink="#08CDE6"/>
    <Button
            android:text="Go"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:id="@+id/gobtn" android:textColor="#673AB7"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.423"
            android:background="#00BCD4" android:textSize="20sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fineRateText" app:layout_constraintVertical_bias="0.106"/>
    <CheckBox
            android:text="Has Fine"
            android:layout_width="232dp"
            android:layout_height="34dp"
            android:id="@+id/hasFine" android:textSize="18sp"
            android:textColor="#DD0655"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintTop_toBottomOf="@+id/guestMealCheckBox" android:layout_marginTop="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>