<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

    <TextView
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:id="@+id/headerLayout" android:background="#00BCD4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:text="@string/mealRateText"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="@dimen/text_view_height"
            android:id="@+id/mealRatetxt"
            android:textSize="@dimen/string_text_size"
            app:layout_constraintTop_toTopOf="@+id/headerLayout"
            app:layout_constraintStart_toStartOf="@+id/headerLayout" android:layout_marginStart="5dp"/>
    <TextView
            android:text="@string/extraCostText"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="@dimen/text_view_height"
            android:textSize="@dimen/string_text_size"
            android:id="@+id/totalCostTxt" app:layout_constraintStart_toEndOf="@+id/mealRatetxt"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="@+id/headerLayout"
            android:layout_marginEnd="0dp" app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:text="@string/fineRangeText"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="@dimen/text_view_height"
            android:id="@+id/fineRangeTxt"
            android:textSize="@dimen/string_text_size"
            android:visibility="invisible"
            android:textColor="@color/fineColor"
            app:layout_constraintTop_toBottomOf="@+id/mealRatetxt"
            app:layout_constraintStart_toStartOf="@+id/headerLayout" android:layout_marginStart="5dp"
            android:layout_marginBottom="0dp" app:layout_constraintBottom_toBottomOf="@+id/headerLayout"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/fineRateText"
            android:layout_width="@dimen/text_view_width"
            android:layout_height="@dimen/text_view_height"
            android:id="@+id/fineRateTxt"
            android:textSize="@dimen/string_text_size"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/totalCostTxt"
            app:layout_constraintStart_toEndOf="@+id/fineRangeTxt"
            app:layout_constraintEnd_toEndOf="@+id/headerLayout"
            app:layout_constraintBottom_toBottomOf="@+id/headerLayout" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:textColor="@color/fineColor"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:background="#47BEC1C2"/>

    <TextView
            android:text="Total Balance      :"
            android:textSize="@dimen/input_text_size"
            android:layout_width="@dimen/input_text_width"
            android:layout_height="@dimen/input_text_height"
            android:id="@+id/textView9" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fineRangeTxt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"/>

    <EditText
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/totalBalance"
            app:layout_constraintTop_toBottomOf="@+id/fineRateTxt"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="6dp"/>

    <TextView
            android:text="Total Meal           :"
            android:textSize="@dimen/input_text_size"
            android:layout_width="@dimen/input_text_width"
            android:layout_height="@dimen/input_text_height"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <EditText
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/totalMeal"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/totalBalance" android:layout_marginTop="0dp"/>
    <TextView
            android:text="Guest Meal(tk)    :"
            android:layout_width="@dimen/input_text_width"
            android:textSize="@dimen/input_text_size"
            android:layout_height="@dimen/input_text_height"
            android:visibility="invisible"
            android:id="@+id/countGuestMealText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginStart="28dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6" app:layout_constraintVertical_bias="0.222"/>
    <EditText
            android:layout_width="@dimen/input_width"
            android:layout_height="@dimen/input_height"
            android:inputType="number"
            android:ems="10"
            android:visibility="invisible"
            android:id="@+id/guestMealTk"
            app:layout_constraintStart_toEndOf="@+id/countGuestMealText"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/totalMeal"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="Calculate"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/calculate"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:background="#00BCD4" app:layout_constraintStart_toEndOf="@+id/clearBtn"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.341"/>

    <TextView
            android:layout_width="match_parent"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_height="170dp" android:background="#00FDFDFD" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/calculate" app:layout_constraintVertical_bias="0.038"/>
    <TextView
            android:text="Total Spend                    :"
            android:textSize="@dimen/output_text_size"
            android:textColor="@color/output_text_color"
            android:layout_width="@dimen/output_text_width"
            android:layout_marginStart="20dp"
            android:layout_height="@dimen/input_text_height"
            android:visibility="invisible"
            android:id="@+id/totalSpendBalanceText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
    />
    <TextView
            android:text="Remaing Balance          :"
            android:textSize="@dimen/output_text_size"
            android:visibility="invisible"
            android:textColor="@color/output_text_color"
            android:layout_width="@dimen/output_text_width"
            android:layout_height="@dimen/input_text_height"
            android:id="@+id/remainingBalanceText" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/totalSpendBalanceText"
            android:layout_marginStart="20dp" app:layout_constraintStart_toStartOf="@+id/textView11"
    />
    <TextView
            android:text="Total Fine                        :"
            android:layout_width="@dimen/output_text_width"
            android:layout_marginStart="20dp"
            android:visibility="invisible"
            android:textColor="@color/fineColor"
            android:textSize="@dimen/output_text_size"
            android:layout_height="@dimen/input_text_height"
            android:id="@+id/fineBalanceText" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/remainingBalanceText"/>
    <TextView
            android:text="Total Due                         :"
            android:id="@+id/dueBalanceText"
            android:visibility="invisible"
            android:layout_width="@dimen/output_text_width"
            android:textColor="@color/fineColor"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/output_text_size"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/fineBalanceText"
    />
    <TextView
            android:layout_width="@dimen/output_width"
            android:textSize="@dimen/output_text_size"
            android:textColor="@color/output_text_color"
            android:layout_height="@dimen/input_text_height"
            android:visibility="invisible"
            android:id="@+id/totalSpendBalance" app:layout_constraintStart_toEndOf="@+id/totalSpendBalanceText"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="@dimen/output_width"
            android:layout_height="@dimen/input_text_height"
            android:textSize="@dimen/output_text_size"
            android:textColor="@color/output_text_color"
            android:visibility="invisible"
            android:id="@+id/remainingBalance" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/totalSpendBalance"
            app:layout_constraintStart_toEndOf="@+id/remainingBalanceText" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView11" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView

            android:layout_width="@dimen/output_width"
            android:textSize="@dimen/output_text_size"
            android:textColor="@color/fineColor"
            android:visibility="invisible"
            android:layout_height="@dimen/input_text_height"
            android:id="@+id/fineBalance" app:layout_constraintStart_toEndOf="@+id/fineBalanceText"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/remainingBalance" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:textColor="@color/fineColor"
            android:textSize="@dimen/output_text_size"
            android:layout_width="@dimen/output_width"
            android:layout_height="@dimen/input_text_height"
            android:visibility="invisible"
            android:id="@+id/dueBalance" app:layout_constraintStart_toEndOf="@+id/dueBalanceText"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fineBalance" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="Clear"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/clearBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:background="#94FF5722"/>


</androidx.constraintlayout.widget.ConstraintLayout>

